# FSMCreator

QtFSM/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.ps1  build.sh  build_debug.sh  deneme  deneme.cpp  deneme.json  run_parser_test.sh  temp_file_ops.txt  temp_theme_methods.txt  test_and_run.sh
QtFSM/docker/: Dockerfile.ci  Dockerfile.dev
QtFSM/docs/: INSTALLATION.md  WSL2_SETUP.md  dependencies.md
QtFSM/scripts/: setup_dev_env.ps1  setup_dev_env.sh  setup_libclang_env.sh
QtFSM/src/: main.cpp
QtFSM/src/codegen/: CodeGenerator.cpp  CodeGenerator.h  README.md
QtFSM/src/model/: Event.cpp  Event.h  FSM.cpp  FSM.h  README.md  State.cpp  State.h  Transition.cpp  Transition.h
QtFSM/src/parsing/: AST.cpp  AST.h  CodeParser.cpp  CodeParser.h  CppParser.cpp  CppParser.h  Lexer.cpp  Lexer.h  LibClangParser.cpp  LibClangParser.h  LibClangParserStub.cpp  ModelBuilder.cpp  ModelBuilder.h  PARSING_GUIDE.md  README.md  Token.cpp  Token.h
QtFSM/src/serialization/: JSONSerializer.cpp  JSONSerializer.h  README.md
QtFSM/src/view/: AboutDialog.cpp  AboutDialog.h  CodePreviewPanel.cpp  CodePreviewPanel.h  DiagramEditor.cpp  DiagramEditor.h  MainWindow.cpp  MainWindow.h  PropertiesPanel.cpp  PropertiesPanel.h  README.md  StateDialog.cpp  StateDialog.h  StateItem.cpp  StateItem.h  TransitionDialog.cpp  TransitionDialog.h  TransitionItem.cpp  TransitionItem.h
QtFSM/src/viewmodel/: DiagramViewModel.cpp  DiagramViewModel.h  ProjectViewModel.cpp  ProjectViewModel.h  README.md
QtFSM/src/viewmodel/commands/: AddStateCommand.cpp  AddStateCommand.h  AddTransitionCommand.cpp  AddTransitionCommand.h  DeleteStateCommand.cpp  DeleteStateCommand.h  DeleteTransitionCommand.cpp  DeleteTransitionCommand.h
QtFSM/tests/: test_debug_parser.cpp  test_fsm.cpp  test_input.cpp  test_json.cpp  test_json_roundtrip.cpp  test_lexer.cpp  test_libclang_parser.cpp  test_parser.cpp  test_stress.cpp  test_user_code.cpp  test_validation.cpp  test_verify_export.cpp
QtFSM/web_solution/: index.html  package-lock.json  package.json
QtFSM/web_solution/__tests__/: codegen.test.js  model.test.js  parser.test.js
QtFSM/web_solution/css/: components.css  layout.css  theme.css
QtFSM/web_solution/js/: app.js  canvas.js  codegen.js  model.js  parser.js  renderer.js  ui.js
